# tradeapis

./: .gitignore  README.md  pyproject.toml
tradeapis/: buylang.py  cal.py  data.py  fees.py  ifthen.py  ifthen_dsl.py  ifthen_templates.py  orderlang.py  ordermgr.py  polygon.py  rounder.py  test_buylang.py  test_ifthen.py  test_ifthen_templates.py  test_orderlang.py  test_ordermgr.py  test_rounder.py  tradier.py
