[tool.poetry]
name = "tradeapis"
version = "3.2.7"
description = "Stock Market Data Utilities and API Wrappers for Tradier, Polygon"
authors = ["Matt Stancliff <matt@genges.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = ">=3.7.4"
orjson = "^3.6.8"
pandas = "^2.0.3"
arrow = "^1.1.0"
lark = "^1.0.0"
prettyprinter = "^0.18.0"
cachetools = "^5.2.0"
pandas-market-calendars = "^4.1.4"
loguru = ">0.6.0"

# mutil = { path = "../../mutil/", develop = true }
mutil = { git = "https://github.com/mattsta/mutil.git", tag="2.3.1" }
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.11.1"
diskcache = "^5.6.3"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-xdist = "^3.6.1"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
clickhouse-driver = "^0.2.9"
mypy = "^1.11.2"
types-pyyaml = "^6.0.12.20240917"

[tool.mypy]
check_untyped_defs = true
show_traceback = true
enable_incomplete_feature = "NewGenericSyntax"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
